--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,10 @@
 PORT=5000
-DB_URL=mongodb://localhost:27017/jwt
+DB_URL=mongodb://localhost:27017/
 JWT_ACCESS_SECRET=jwt-secret-key
-JWT_REFRESH_SECRET=jwt-refresh-key
+JWT_REFRESH_SECRET=jwt-refresh-secret-key
+SMTP_HOST="smtp.gmail.ru"
+SMTP_PORT=587
+SMTP_USER=yulin.dmitriy.1995@gmail.ru
+SMTP_PASSWORD=Qweasd1645722
+API_URL=http://localhost:5000
+CLIENT_URL=http://localhost:3000
