--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
+    "nodemailer": "^6.7.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
