--- a/server/.env
+++ b/server/.env
@@ -4,7 +4,7 @@ JWT_ACCESS_SECRET=jwt-secret-key
 JWT_REFRESH_SECRET=jwt-refresh-secret-key
 SMTP_HOST="smtp.gmail.ru"
 SMTP_PORT=587
-SMTP_USER=yulin.dmitriy.1995@gmail.ru
-SMTP_PASSWORD=Qweasd1645722
+SMTP_USER=yulin.dmitriy.95@gmail.ru
+SMTP_PASSWORD=1234
 API_URL=http://localhost:5000
 CLIENT_URL=http://localhost:3000
